--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
   <div class="container">
     <!-- <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="logo2.png" alt="Logo" height="80" width="160" class="me-2">
-      <a href="index.html"> -->
+      <img src="logo2.png" alt="Logo" height="80" width="160" class="me-2">-->
+      <a href="index.html">
       <span class="fw-bold text-dark fs-3 nav-head">AeroViaX</span>
       <a>
     </a>
