Save local changes before pull

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 <!-- Hero Section -->
 <section class="hero">
   <video autoplay muted loop playsinline class="position-absolute top-0 start-0 w-100 h-100 object-fit-cover z-n1">
-    <source src="aboutus.mp4" type="video/mp4">
+    <source src="aboutus_R0B28151.mp4" type="video/mp4">
   </video>
   <div>
     <h1 class="display-4 fw-bold text-light">Empowering Industries with Precision Aerial Services</h1>
